# 3DI

./: README.md
docs/: README-tmp.ipynb  index.html  process_video1.tex  process_video2.tex  process_video3.tex
src/: CMakeLists.txt
src/apps/: calibrate_camera.cu  fit_to_multiframe.cu  video.cu  video_detect_face.cu  video_detect_landmarks.cu  video_from_saved_identity.cu  video_learn_identity.cu  video_undistort.cu  visualize_3Doutput.cu  write_2Dlandmarks_3DI.cu
src/lib/: GLfuncs.cu  GLfuncs.h  Optimizer.h  camera.h  config.cu  config.h  constants.h  derivative_computer.cu  derivative_computer.h  funcs.cu  funcs.h  input_data.cu  input_data.h  logbarrier_initializer.cu  logbarrier_initializer.h  model_fitter.cu  model_fitter.h  newfuncs.cu  newfuncs.h  orthographic_initializer.cu  orthographic_initializer.h  preprocessing.cu  preprocessing.h  renderer.cu  renderer.h  rotation_header.cu  rotation_header.h  solver.cu  solver.h  video_fitter.cu  video_fitter.h
